feat: add complete shell script to upload deploy mint close

--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
   "uploadMethod": "bundlr",
   "retainAuthority": true,
   "isMutable": true,
-  "symbol": "",
+  "symbol": "HERO",
   "sellerFeeBasisPoints": 0,
   "awsConfig": null,
   "nftStorageAuthToken": null,
